# bowled_server

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  docker-compose.local.yml  docker-compose.yml  docker-local.yml  doppler.yaml  pyproject.toml  setup_server.sh
apis/: api_schema.py  create.py  game.py  model.py  team.py  test_api.py
app/: cachestore.py  import_routes.py  main.py  middlewares.py
archive/team/: play_game.py
archive/user/: api_schema.py
deployment/nginx/: Dockerfile  nginx.conf
deployment/rest_server/: Dockerfile
dev/: gen_names.py
engine/: game_engine.py  team_generation.py
gamelib/: data_models.py
gamelib/cache_manager/: load_skills_attributes.py
gamelib/player/: generate_players.py  public_player.py
gamelib/team/: live_team.py  public_team.py
lib/cache_manager/: load_skills_attributes.py
lib/core/: auth_bearer.py  cache_store.py  cachestore.py  data_store.py  errors.py  logger.py  server_context.py
lib/game/team/: public_team.py
lib/utils/: final_names.json  json_encoders.py  player_generator.py  simulate_game.py  team01.json
rest_server/: api_schema.py  data_models.py  test_api.py
rest_server/live/: api_models.py  get_metrics.py  get_players.py  get_teams.py  live_game.py  live_players.py  start_game.py  teams.py  update_teams.py
rest_server/live_match/: api_models.py  start_match.py
rest_server/monitoring/: api_schema.py  heartbeat.py  index.py
rest_server/system_management/: reload_cache.py
rest_server/team/: get_players.py  play_game.py
rest_server/user/: api_schema.py  create_user.py  get_user.py
sdk/: cachestore.py  logger.py
